fix(core): bootstrap popover prevents collapse closing

--- a/src/core/components/Popover/Popover.scss
+++ b/src/core/components/Popover/Popover.scss
@@ -1,9 +1,11 @@
 @import '../../../shared/assets/styles/index.scss';
 
-.popover {
+.popover.ac-popover {
+  @extend .ac-bg-dark-color-2, .p-1, .text-white, .rounded, .shadow;
+
   .popover-body {
-    padding: $small-size !important;
     color: unset !important;
+    padding: $small-size;
   }
 
   .popover-header {
@@ -14,29 +16,29 @@
       display: none !important;
     }
   }
-}
 
-.bs-popover-auto[data-popper-placement^='right'] > .popover-arrow::after,
-.bs-popover-end > .popover-arrow::after {
-  border-right-color: $dark-color-2 !important;
-}
+  &.bs-popover-auto[data-popper-placement^='right'] > .popover-arrow::after,
+  .bs-popover-end > .popover-arrow::after {
+    border-right-color: $dark-color-2 !important;
+  }
 
-.bs-popover-auto[data-popper-placement^='left'] > .popover-arrow::after,
-.bs-popover-start > .popover-arrow::after {
-  border-left-color: $dark-color-2 !important;
-}
+  &.bs-popover-auto[data-popper-placement^='left'] > .popover-arrow::after,
+  .bs-popover-start > .popover-arrow::after {
+    border-left-color: $dark-color-2 !important;
+  }
 
-.bs-popover-auto[data-popper-placement^='top'] > .popover-arrow::after,
-.bs-popover-top > .popover-arrow::after {
-  border-top-color: $dark-color-2 !important;
-}
+  &.bs-popover-auto[data-popper-placement^='top'] > .popover-arrow::after,
+  .bs-popover-top > .popover-arrow::after {
+    border-top-color: $dark-color-2 !important;
+  }
 
-.bs-popover-auto[data-popper-placement^='bottom'] > .popover-arrow::after,
-.bs-popover-top > .popover-arrow::after {
-  border-bottom-color: $dark-color-2 !important;
-}
+  &.bs-popover-auto[data-popper-placement^='bottom'] > .popover-arrow::after,
+  .bs-popover-top > .popover-arrow::after {
+    border-bottom-color: $dark-color-2 !important;
+  }
 
-.bs-popover-auto[data-popper-placement^='bottom'] > .popover-arrow::after,
-.bs-popover-bottom > .popover-arrow::after {
-  border-bottom-color: $dark-color-2 !important;
+  &.bs-popover-auto[data-popper-placement^='bottom'] > .popover-arrow::after,
+  .bs-popover-bottom > .popover-arrow::after {
+    border-bottom-color: $dark-color-2 !important;
+  }
 }
